fix container stretch bug

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
-  color: white;
+  align-items: stretch;
 }
 
 .container-2 {
@@ -44,8 +43,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  color: white;
+  align-items: stretch;
 }
 
 /* .img1 {
